--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
